--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -23,6 +23,7 @@ once_cell = "1.10.0"
 sqlx = {version="0.7", features = ["sqlite", "chrono","runtime-tokio"]}
 thiserror = "^1.0.59"
 openssl = { version = "*", features = ["vendored"] }
+futures = "0.3.30"
 [dev-dependencies]
 test-context = "0.3.0"
 env_logger = {version = "0.11.3"}
